--- a/app/index.html
+++ b/app/index.html
@@ -68,8 +68,10 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+        <script src="scripts/constants.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/services/foursquare.js"></script>
+        <script src="scripts/services/venues.js"></script>
         <!-- endbuild -->
 </body>
 </html>
