--- a/app/index.html
+++ b/app/index.html
@@ -71,8 +71,10 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/constants.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/venue.js"></script>
         <script src="scripts/services/foursquare.js"></script>
         <script src="scripts/services/venues.js"></script>
+        <script src="scripts/services/photo.js"></script>
         <!-- endbuild -->
 </body>
 </html>
