--- a/app/index.html
+++ b/app/index.html
@@ -76,6 +76,7 @@
         <script src="scripts/services/foursquare.js"></script>
         <script src="scripts/services/venues.js"></script>
         <script src="scripts/services/photo.js"></script>
+        <script src="scripts/services/categories.js"></script>
         <!-- endbuild -->
 </body>
 </html>
