Added intro page

--- a/app/index.html
+++ b/app/index.html
@@ -72,6 +72,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/constants.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/intro.js"></script>
         <script src="scripts/controllers/venue.js"></script>
         <script src="scripts/services/foursquare.js"></script>
         <script src="scripts/services/venues.js"></script>
