Added some random styling to categories cards, rating when possible, filtering images with CSS3, intro page background animation

--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
-    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600|Open+Sans:400,300,700,800|Lora|Six+Caps|Nunito:400,700|Amatic+SC:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600|Open+Sans:400,300,700,800|Lora|Six+Caps|Nunito:400,700|Amatic+SC:400,700|Niconne|Gudea|Marck+Script|Patrick+Hand+SC|Clicker+Script|EB+Garamond|Yanone+Kaffeesatz|Englebert|Oregano|Shadows+Into+Light+Two&subset=latin,latin-ext,cyrillic-ext,cyrillic' rel='stylesheet' type='text/css'>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <!-- build:css(.tmp) styles/main.css -->
