--- a/app/index.html
+++ b/app/index.html
@@ -54,13 +54,18 @@
         <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
+        <!-- Controllers -->
         <script src="scripts/app.js"></script>
         <script src="scripts/constants.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/intro.js"></script>
         <script src="scripts/controllers/venue.js"></script>
+        <script src="scripts/controllers/search.js"></script>
+
+        <!-- Services -->
         <script src="scripts/services/foursquare.js"></script>
         <script src="scripts/services/venues.js"></script>
+        <script src="scripts/services/venue.js"></script>
         <script src="scripts/services/photo.js"></script>
         <script src="scripts/services/categories.js"></script>
         <script src="scripts/services/geolocation.js"></script>
