--- a/app/index.html
+++ b/app/index.html
@@ -45,6 +45,7 @@
     <script src="bower_components/moment/moment.js"></script>
 
         <!-- build:js scripts/modules.js -->
+        <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5b0WXtloSfKV0CVedO4v3Hf4GidFt5rE&sensor=false"></script>-->
         <script src="bower_components/angular-resource/angular-resource.js"></script>
         <script src="bower_components/angular-cookies/angular-cookies.js"></script>
         <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
@@ -62,6 +63,7 @@
         <script src="scripts/services/venues.js"></script>
         <script src="scripts/services/photo.js"></script>
         <script src="scripts/services/categories.js"></script>
+        <script src="scripts/services/geolocation.js"></script>
         <!-- endbuild -->
 </body>
 </html>
