--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,7 @@
         <script src="scripts/services/photo.js"></script>
         <script src="scripts/services/categories.js"></script>
         <script src="scripts/services/geolocation.js"></script>
+        <script src="scripts/services/storage.js"></script>
         <!-- endbuild -->
 </body>
 </html>
