--- a/app/index.html
+++ b/app/index.html
@@ -61,6 +61,7 @@
         <script src="scripts/controllers/intro.js"></script>
         <script src="scripts/controllers/venue.js"></script>
         <script src="scripts/controllers/search.js"></script>
+        <script src="scripts/controllers/venues.js"></script>
 
         <!-- Services -->
         <script src="scripts/services/foursquare.js"></script>
