--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,7 @@
     <script src="bower_components/jquery/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/moment/moment.js"></script>
+    <script src="bower_components/speakingurl/speakingurl.min.js"></script>
 
         <!-- build:js scripts/modules.js -->
         <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5b0WXtloSfKV0CVedO4v3Hf4GidFt5rE&sensor=false"></script>-->
@@ -62,13 +63,25 @@
         <script src="scripts/controllers/venue.js"></script>
         <script src="scripts/controllers/search.js"></script>
         <script src="scripts/controllers/venues.js"></script>
+        <script src="modules/city/city.js"></script>
+        <script src="modules/category/category.js"></script>
+        <script src="modules/venue/venue.js"></script>
+
+        <!-- Api -->
+        <script src="modules/common/categories/categoriesApi.js"></script>
+        <script src="modules/common/venues/venuesApi.js"></script>
+        <script src="modules/common/venue/venueApi.js"></script>
 
         <!-- Services -->
         <script src="scripts/services/foursquare.js"></script>
-        <script src="scripts/services/venues.js"></script>
+        <!--<script src="scripts/services/venues.js"></script>-->
         <script src="scripts/services/venue.js"></script>
-        <script src="scripts/services/photo.js"></script>
-        <script src="scripts/services/categories.js"></script>
+        <!--<script src="scripts/services/photo.js"></script>-->
+        <script src="modules/common/categories/categories.js"></script>
+        <script src="modules/common/venues/venues.js"></script>
+        <script src="modules/common/venue/venue.js"></script>
+        <script src="modules/common/photos/photos.js"></script>
+        <script src="modules/common/tips/tips.js"></script>
         <script src="scripts/services/geolocation.js"></script>
         <script src="scripts/services/storage.js"></script>
         <!-- endbuild -->
